# DiplomOB2

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
content/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_name.py
content/templates/content/: cat_category.html  categories_list.html  category_delete.html  category_form.html  confirm_delete.html  content_detail.html  content_form.html  content_list.html  home.html  my_content_list.html
content/templates/content/includes/: categories.html  footer.html  inc_menu.html
static/css/: css_family.css
users/: admin.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_payment_content.py  0003_alter_payment_content_alter_subscription_content_and_more.py  0004_remove_subscription_is_active_and_more.py  0005_subscription_is_active.py
users/templates/payments/: create_payment.html  payment_check.html
users/templates/subscription/: subscription_list.html
users/templates/users/: login.html  logout.html  profile.html  profile_edit.html  user_form.html
